--- a/chats.html
+++ b/chats.html
@@ -34,23 +34,25 @@
     </header>
 
     <main class="main-screen">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img src="fotos/junwoo.jpg" class="user-component__avatar" />
-          <div class="user-component__text">
-            <h4 class="user-component__title user-component__title-bold">
-              Junwoo Shin
-            </h4>
-            <h6 class="user-component__subtitle">
-              Please check My Kokoa Account Info
-            </h6>
+      <a href="chat.html">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img src="fotos/junwoo.jpg" class="user-component__avatar" />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title-bold">
+                Junwoo Shin
+              </h4>
+              <h6 class="user-component__subtitle">
+                Please check My Kokoa Account Info
+              </h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span class="user-component__time">21:22</span>
+            <div class="badge">1</div>
           </div>
         </div>
-        <div class="user-component__column">
-          <span class="user-component__time">21:22</span>
-          <div class="badge">1</div>
-        </div>
-      </div>
+      </a>
     </main>
 
     <nav class="nav">
