--- a/friends.html
+++ b/friends.html
@@ -108,6 +108,10 @@
       </ul>
     </nav>
 
+    <div id="splash-screen">
+      <i class="fas fa-comment"></i>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/26fe6cc36f.js"
       crossorigin="anonymous"
