--- a/friends.html
+++ b/friends.html
@@ -112,6 +112,10 @@
       <i class="fas fa-comment"></i>
     </div>
 
+    <div id="no-mobile">
+      <span>Your Screen is too BIG!!</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/26fe6cc36f.js"
       crossorigin="anonymous"
