--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
       <a href="#">Find Kokoa Account or Password</a>
     </form>
 
+    <div id="no-mobile">
+      <span>Your Screen is too BIG!!</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/26fe6cc36f.js"
       crossorigin="anonymous"
