--- a/more.html
+++ b/more.html
@@ -116,6 +116,10 @@
       </ul>
     </nav>
 
+    <div id="no-mobile">
+      <span>Your Screen is too BIG!!</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/26fe6cc36f.js"
       crossorigin="anonymous"
